--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 </head>
 
 <body>
+<div class="badan">
 	<div class="loading"></div>
 	<audio class="song" controls loop>
         <source src="ramadhan.mp3" ></source>
@@ -170,6 +171,7 @@
 
 
 	</div>
+</div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
